[package]
name = "xcfg-rs"
version = "0.3.0"
edition = "2021"
description = "A simple configuration file parser for Rust"
license = "MIT"
repository = "https://github.com/kumudiaorong/xcfg-rs.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xcfg"
path = "src/lib.rs"

[features]
default = ["toml"]
toml = ["dep:toml"]
yaml = ["dep:serde_yml"]
json = ["dep:serde_json"]
full = ["toml", "yaml", "json"]

[dependencies]
xcfg-derive = { version = "0.1.0", path = "derive" }
thiserror = "1.0.64"
serde = { version = "1.0.196" }
toml = { version = "0.8.10", optional = true }
serde_yml = { version = "0.0.12", optional = true }
serde_json = { version = "1.0.128", optional = true }

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
toml = { version = "0.8.10" }
serde_yml = { version = "0.0.12" }
serde_json = { version = "1.0.128" }
scopeguard = "1.2.0"
