[package]
name = "xcfg-rs"
version = "0.3.1"
edition = "2021"
description = "A simple configuration file parser for Rust"
license = "MIT"
repository = "https://github.com/kumudiaorong/xcfg-rs.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xcfg"
path = "src/lib.rs"

[features]
default = ["toml"]
derive = ["dep:xcfg-derive"]
toml = ["dep:toml"]
yaml = ["dep:serde_yml"]
json = ["dep:serde_json"]
full = ["derive", "toml", "yaml", "json"]

[dependencies]
xcfg-derive = { version = "0.1.0", path = "derive", optional = true }
thiserror = "1.0.64"
serde = { version = "1.0.196" }
toml = { version = "0.8.10", optional = true }
serde_yml = { version = "0.0.12", optional = true }
serde_json = { version = "1.0.128", optional = true }

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
toml = { version = "0.8.10" }
serde_yml = { version = "0.0.12" }
serde_json = { version = "1.0.128" }
scopeguard = "1.2.0"

[[test]]
name = "any-test"
path = "tests/any_test.rs"
required-features = ["full"]

[[test]]
name = "toml-test"
path = "tests/toml_test.rs"
required-features = ["toml"]

[[test]]
name = "yaml-test"
path = "tests/yaml_test.rs"
required-features = ["yaml"]

[[test]]
name = "json-test"
path = "tests/json_test.rs"
required-features = ["json"]

[[test]]
name = "load-test"
path = "tests/load.rs"
required-features = ["full"]

[[example]]
name = "full"
path = "example/full.rs"
required-features = ["full"]
