[workspace]
members = ["xcfg-rs", "xcfg-derive"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["km0e <kmdr.error@gmail.com>"]
repository = "https://github.com/km0e/resplus.git"
description = "A Rust library for different configuration file formats, including TOML, YAML, and JSON."
license = "MIT"

[workspace.dependencies]
